# GeoNature-atlas

./: .directory  .dockerignore  .editorconfig  .env.sample  .flaskenv  .flaskenv.sample  .git-blame-ignore-revs  .gitignore  .gitmodules  .htpasswd  Dockerfile  Dockerfile_old  LICENCE.txt  MANIFEST.in  Makefile  README.md  README.rst  VERSION  __init__.py  atlas-service.conf  atlas.wsgi  atlasPNE.py  config.py.sample  docker-compose.override-dev.yml  docker-compose.override-prod.yml  docker-compose.sh  docker-compose.yml  docker_install_atlas_schema.sh  docker_startup.sh  geonature-atlas-dev.service  geonature-atlas.service  gunicorn_start.sh  homeJsonDump.js  initAtlas.py  install_app.sh  install_db.sh  install_db_extended.sh  install_db_gn2.sh  install_env.sh  manage.py  (+9 more)
.github/: copilot-instructions.md
atlas/: app.py  atlasAPI.py  atlasRoutes.py  babel.cfg  env.py  messages.pot  schemas.py  utils.py
config/: config.py.sample  custom.js  databaseini.py.sample  settings.ini.sample
data/: atlas.sql  atlas_geonature.sql  atlas_source.sql  atlas_usershub.sql  atlas_with_extended_areas.sql  gbif.sql  grant.sql  grant_geonature.sql  mailles.sql  migrate_stats.sql  migrate_subdivided_territory.sql  observations_mailles.sql  refresh.sh  refresh.sql  update1.4.0to1.5.0.sql  update_1.2.2to1.2.3.sql  update_1.2.6to1.3.0.sql  update_1.3.0to1.4.0.sql  update_1.3.2to1.4.0.sql  update_1.4.0to1.5.0.sql  update_1.4.1to1.4.2.sql  update_1.4.2to1.4.3.sql  update_vm_observations.sql
docs/: CONTRIBUTING.md  FAQ.md  Makefile  changelog.rst  conf.py  configuration.rst  cookies_rgpd.rst  couches_sig.rst  degradation_donnees.rst  diffusion_donnees.rst  index.rst  install_db_without_gn.rst  install_docker.rst  installation.rst  maj_data.rst  maj_vues_materialisees.rst  multilingual.rst  postgresql-version.rst  rgpd.rst  (+2 more)
(+527 files in other folders)
